# tests-unitaires

./: README.md  pyproject.toml
ex01_parite/: README.md  parite.py  test_parite.py
ex02_somme/: README.md  somme.py  test_somme.py
ex03_moyenne/: README.md  moyenne.py  test_moyenne.py
ex04_compteur/: README.md  compteur.py  test_compteur.py
ex05_validation_age/: README.md  test_validation.py  validation.py
ex06_validation_email/: README.md  email.py  test_email.py
ex07_temperature/: README.md  temperature.py  test_temperature.py
ex08_tri/: README.md  test_tri.py  tri.py
ex09_recherche/: README.md  recherche.py  test_recherche.py
ex10_calculatrice_polonaise/: README.md  rpn.py  test_rpn.py
